--- a/map1.html
+++ b/map1.html
@@ -39,7 +39,7 @@
             <li><a href="map3.html">Mapa 3</a></li>
         </ol>
         <header>
-            <h3 align="center">Qual a população total dos municípios?</h3>
+            <h3 align="center">Qual a distribuição populacional do sertão?</h3>
         </header>
 
         <div id="chart"></div>
