--- a/map2.html
+++ b/map2.html
@@ -37,7 +37,7 @@
             <li class="active"><a href="map3.html">Mapa 3</a></li>
         </ol>
         <header>
-            <h3 align="center">Qual a arrecadação total dos municípios?</h3>
+            <h3 align="center">Quais municípios arrecadam mais?</h3>
         </header>
         <div id="chart"></div>
 
