--- a/map3.html
+++ b/map3.html
@@ -37,7 +37,7 @@
             <li><a href="map3.html">Mapa 3</a></li>
         </ol>
         <header>
-            <h3 align="center">Quais municípios que mais consomem água no sertão?</h3>
+            <h3 align="center">Quais são os maiores consumidores de água no sertão?</h3>
         </header>
 
         <div id="chart"></div>
