--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>D3</title>
+    <title>Visualização</title>
 
     <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto+Slab" rel="stylesheet">
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -42,7 +42,7 @@
 
                 <h3>Labs</h3>
                 <ul class="nav nav-pills nav-stacked">
-                    <li role="presentation"><a target="_blank" href="map1.html" target="_blank">Lab 4</a></li>
+                    <li role="presentation"><a target="_blank" href="map1.html">Lab 4</a></li>
                 </ul>
 
             </div>
