--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <h2><strong>Visualização de Dados</strong></h2>
         </div>
         <header>
-            <h1>D3</h1>
+            <h1>Visualização</h1>
         </header>
 
         <div class="row">
